# dod-miner

./: Cargo.toml  README.md  install.sh
apps/dod_miner/: Cargo.toml
apps/dod_miner/src/: fetcher.rs  lib.rs  main.rs  miner.rs  read_gpu_config.rs  types.rs
config/: gpu_config.toml
crates/dod_gpu/: Cargo.toml  build.rs
crates/dod_gpu/src/: gpu.rs  miner.rs  mod.rs  types.rs
crates/dod_gpu/src/cuda/includes/: cuda_helper.h  miner.h  sha256.cuh  sha256d.cuh
crates/dod_gpu/src/cuda/kernels/: miner.cu
crates/dod_utils/src/: bitwork.rs  types.rs
